# kafka_exploring

./: .create_topic.sh.swp  .gitignore  README.md  connect_kakfa.sh  connect_zookeeper.sh  create_topic.sh  delete_topic.sh  describe_topic.sh  docker-compose.yml  list_topics.sh
consumer_cmds/: consume.sh  consume_all.sh  consume_group.sh  describe_consumer_groups.sh  list_consumer_groups.sh  restart_offsets.sh
exploring_kafka/: Cargo.toml
exploring_kafka/src/: lib.rs
producer_cmds/: produce.sh
topic_cmds/: create_topic.sh
