[package]
name = "exploring_kafka"
version = "0.1.0"
authors = ["Renato <renato145@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.26", features = ["cmake-build"] }
clap = "3.0.0-beta.2"
tokio = { version = "1.5.0", features = ["full"] }
anyhow = "1.0.40"
log = "0.4.14"
simple_logger = "1.11.0"
futures = "0.3.14"
